[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Levelgreen-min.png" type="Texture" id=1]
[ext_resource path="res://assets/world-map-306338.png" type="Texture" id=2]
[ext_resource path="res://assets/Levelreoundred-min.png" type="Texture" id=3]
[ext_resource path="res://level_select.gd" type="Script" id=4]

[node name="Level Select" type="Node2D"]
script = ExtResource( 4 )

[node name="world-map-306338" type="Sprite" parent="."]
position = Vector2( 356.099, 237.512 )
scale = Vector2( 0.446037, 0.473634 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 473.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AliceLev1" type="TextureButton" parent="Control"]
anchor_left = 0.028
anchor_top = 0.115
anchor_right = 0.028
anchor_bottom = 0.115
margin_left = 83.2285
margin_top = 367.778
margin_right = 190.228
margin_bottom = 434.778
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BobLev1" type="TextureButton" parent="Control"]
anchor_left = 0.028
anchor_top = 0.115
anchor_right = 0.028
anchor_bottom = 0.115
margin_left = 624.726
margin_top = -28.9758
margin_right = 731.726
margin_bottom = 38.0242
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BobLev2" type="TextureButton" parent="Control"]
anchor_left = 0.028
anchor_top = 0.115
anchor_right = 0.028
anchor_bottom = 0.115
margin_left = 521.337
margin_top = 40.8115
margin_right = 628.337
margin_bottom = 107.811
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AliceLev2" type="TextureButton" parent="Control"]
anchor_left = 0.028
anchor_top = 0.115
anchor_right = 0.028
anchor_bottom = 0.115
margin_left = 120.707
margin_top = 237.25
margin_right = 227.707
margin_bottom = 304.25
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AliceLev3" type="TextureButton" parent="Control"]
anchor_left = 0.028
anchor_top = 0.115
anchor_right = 0.028
anchor_bottom = 0.115
margin_left = 221.511
margin_top = 168.755
margin_right = 328.511
margin_bottom = 235.755
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BobLev3" type="TextureButton" parent="Control"]
anchor_left = 0.028
anchor_top = 0.115
anchor_right = 0.028
anchor_bottom = 0.115
margin_left = 432.165
margin_top = 108.014
margin_right = 539.165
margin_bottom = 175.014
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalLevel" type="TextureButton" parent="Control"]
anchor_left = 0.028
anchor_top = 0.115
anchor_right = 0.028
anchor_bottom = 0.115
margin_left = 282.251
margin_top = 21.4261
margin_right = 389.251
margin_bottom = 88.4261
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1Alice" type="Label" parent="Control"]
margin_left = 160.238
margin_top = 427.192
margin_right = 171.238
margin_bottom = 441.192
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1Bob" type="Label" parent="Control"]
margin_left = 694.138
margin_top = 24.3921
margin_right = 705.138
margin_bottom = 38.3921
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2Bob" type="Label" parent="Control"]
margin_left = 588.688
margin_top = 92.7921
margin_right = 599.688
margin_bottom = 106.792
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2Alice" type="Label" parent="Control"]
margin_left = 187.788
margin_top = 289.442
margin_right = 198.788
margin_bottom = 303.442
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3Alice" type="Label" parent="Control"]
margin_left = 289.438
margin_top = 221.992
margin_right = 300.438
margin_bottom = 235.992
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3Bob" type="Label" parent="Control"]
margin_left = 496.538
margin_top = 158.342
margin_right = 507.538
margin_bottom = 172.342
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelFinal" type="Label" parent="Control"]
margin_left = 334.088
margin_top = 76.6421
margin_right = 372.088
margin_bottom = 90.6421
text = "FINAL"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/AliceLev1" to="." method="_on_AliceLev1_pressed"]
[connection signal="pressed" from="Control/AliceLev2" to="." method="_on_AliceLev2_pressed"]
[connection signal="pressed" from="Control/AliceLev3" to="." method="_on_AliceLev3_pressed"]
[connection signal="pressed" from="Control/FinalLevel" to="." method="_on_FinalLevel_pressed"]
